--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     text-align: center;
     color: white;
     padding: 80px 0;
-    background: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80') center/cover;
+    background: url('../images/header-bg.jpg') center/cover;
     position: relative;
     border-radius: 0 0 20px 20px;
 }
