--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,23 @@ body {
     text-align: center;
 }
 
+.hero-section::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px; /* Modifica le dimensioni a tuo piacimento */
+    height: 200px;
+    background: url(../assets/images/logo-removebg-preview.png) center / contain no-repeat;
+    opacity: 0.7;
+    z-index: 1;
+    pointer-events: none;
+}
+
+
+
+
 .hero-overlay {
     position: absolute;
     top: 0;
