--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body {
 
 
 
-
+/*
 .main-title {
     font-size: 4.5em;
     font-weight: 900;
@@ -88,6 +88,21 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+}
+*/
+
+.main-title {
+    font-size: 4.5em;
+    font-weight: 900;
+    margin-bottom: 20px;
+    color: black !important;
+    text-shadow: 
+        3px 3px 0 yellow,
+        -1px -1px 0 yellow,
+        1px -1px 0 yellow,
+        -1px 1px 0 yellow !important;
+    background: none !important;
+    -webkit-text-fill-color: black !important;
 }
 
 .subtitle {
