--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,8 @@ body {
 
 .main-title {
     font-size: 4rem !important;
-    color: #ffd700 !important;
-    text-shadow: 3px 3px 0px #ff0000 !important;
+    color: #040404 !important;
+    text-shadow: 3px 3px 0px #ffd700 !important;
     margin-bottom: 1rem !important;
     font-weight: bold !important;
     font-family: Arial, sans-serif !important;
@@ -75,20 +75,6 @@ body {
     z-index: 2;
 }
 
-
-
-
-
-.main-title {
-    /* font-size: 4.5em; */
-    /* font-weight: 900; */
-    /* margin-bottom: 20px; */
-    /* text-shadow: 3px 3px 10px rgba(255, 0, 0, 0.5); */
-    /* background: linear-gradient(45deg, #ff0000, #ff6b6b, #ffd93d); */
-    /* -webkit-background-clip: text; */
-    /* -webkit-text-fill-color: transparent; */
-    /* background-clip: text; */
-}
 
 .subtitle {
     font-size: 1.8em;
