--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,13 +86,15 @@ body {
 }
 
 .subtitle {
-    font-size: 1.8rem;
-    color: #ff4500;
+    font-size: 2.8rem;
+    color: #040404; /* come main-title */
+    text-shadow: 3px 3px 0px var(--inferno-giallo); /* aggiunto */
     margin-bottom: 10px;
-    font-weight: 300;
+    font-weight: bold; /* da 300 a bold */
     font-style: italic;
     text-transform: uppercase;
     letter-spacing: 2px;
+    font-family: Arial, sans-serif; /* aggiunto */
 }
 
 .edition-badge {
